# image_captioning_AI

./: README.md  main.py  pyproject.toml
models/: caption_model.py
utils/: preprocess.py
