[tool.poetry]
name = "image-captioning-api"
version = "0.1.0"
description = ""
authors = ["yusuke <ritchie.deep.purple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pillow = "^10.3.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
transformers = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
